--- a/src/modules/core/Navbar.css
+++ b/src/modules/core/Navbar.css
@@ -1,4 +1,3 @@
-
 #nav-side-menu:hover {
     width: 200px;
 }
@@ -7,7 +6,7 @@
     position: fixed;
     left: 0;
     top: 0;
-    padding-top: 75px;
+    padding-top: 55px;
     overflow-x: hidden;
     background-color: #1b3951;
     width: 45px;
@@ -19,42 +18,43 @@
     z-index: 9990;
 }
 
-    #nav-side-menu ul, #nav-side-menu .side-menu {
-        list-style: none;
-        padding: 0;
-        margin: 0;
-        line-height: 42px;
-        cursor: pointer;
-    }
+#nav-side-menu ul,
+#nav-side-menu .side-menu {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    line-height: 42px;
+    cursor: pointer;
+}
 
-    #nav-side-menu .side-menu {
-        padding-left: 5px;
-        border-left: 3px solid transparent;
-        border-bottom: 1px solid #3f525a;
-    }
+#nav-side-menu .side-menu {
+    padding-left: 5px;
+    border-left: 3px solid transparent;
+    border-bottom: 1px solid #3f525a;
+}
 
-        #nav-side-menu .side-menu a {
-            text-decoration: none;
-            color: #e1ffff;
-            display: block;
-            width: 100%;
-            padding-left: 3px;
-        }
+#nav-side-menu .side-menu a {
+    text-decoration: none;
+    color: #e1ffff;
+    display: block;
+    width: 100%;
+    padding-left: 3px;
+}
 
-            #nav-side-menu .side-menu a i {
-                width: 20px;
-                padding-right: 35px;
-            }
+#nav-side-menu .side-menu a i {
+    width: 20px;
+    padding-right: 35px;
+}
 
-        #nav-side-menu .side-menu:hover {
-            border-left: 3px solid #df630b;
-            background-color: #132839;
-            color: #fff;
-        }
+#nav-side-menu .side-menu:hover {
+    border-left: 3px solid #df630b;
+    background-color: #132839;
+    color: #fff;
+}
 
-    #nav-side-menu .menu-content {
-        display: block;
-    }
+#nav-side-menu .menu-content {
+    display: block;
+}
 
 @media (max-width: 767px) {
     /* hide the side nav on smaller screens, margin-left should be equal to complete width on hover */
@@ -72,7 +72,7 @@
     }
 }
 
-li.active > .treeview-menu {
+li.active>.treeview-menu {
     display: block;
 }
 
@@ -84,19 +84,22 @@ li.active > .treeview-menu {
     padding-left: 5px;
 }
 
-ul > .treeview-menu > li {
+ul>.treeview-menu>li {
     margin: 0;
 }
 
-.treeview-menu > li > a {
+.treeview-menu>li>a {
     /*display: block;*/
     font-size: 14px;
 }
 
-.treeview-menu > li > a > .fa, .treeview-menu > li > a > .glyphicon, .treeview-menu > li > a > .ion {
+.treeview-menu>li>a>.fa,
+.treeview-menu>li>a>.glyphicon,
+.treeview-menu>li>a>.ion {
     width: 20px;
 }
 
-.treeview-menu > li > a > .fa-angle-left, .treeview-menu > li > a > .fa-angle-down {
+.treeview-menu>li>a>.fa-angle-left,
+.treeview-menu>li>a>.fa-angle-down {
     width: auto;
 }
