--- a/src/modules/feed/Feed.css
+++ b/src/modules/feed/Feed.css
@@ -1,10 +1,21 @@
-.nav .nav-item a{
-    padding-left: 0;
+.p-col-fixed {
+    width: 55%;
+}
+
+.btn-feed-search {
+    margin-left: -33px !important;
+}
+
+.nav .nav-item a {
     display: block;
-    padding: .5rem 1rem;
+    padding: 1.2rem 1rem 0.8rem 1rem;
     text-decoration: none;
 }
 
-.nav .nav-item:first-child a{
-    padding-left: 0;
+.active-feed {
+    border-bottom: 3px solid #1A73E8;
+}
+
+.inp-feed-search {
+    width: 100%;
 }
